--- a/Aspert/Aspert/Views/InitPage.xaml
+++ b/Aspert/Aspert/Views/InitPage.xaml
@@ -4,9 +4,7 @@
              x:Class="Aspert.InitPage">
     <Grid ColumnDefinitions="*,*,15*" 
           RowDefinitions="*,*,*,30,30,100">
-        <Image Grid.Column="0"
-               Grid.ColumnSpan="3"
-               Grid.Row="0"
+        <Image Grid.ColumnSpan="3"
                Grid.RowSpan="6"
                Aspect="Fill"
                Source="bg1newicon_aspert.png"/>
