--- a/Aspert/Aspert/Views/MenuPage.xaml
+++ b/Aspert/Aspert/Views/MenuPage.xaml
@@ -16,18 +16,18 @@
                      Command="{Binding Push}"
                      CommandParameter="{Type aspert:MainPage}"
                      HorizontalOptions="Start"
-                     Source="menub_aspert.png"
+                     Source="{StaticResource MenuIcon}"
                      Padding="10"/>
         <Image Grid.Row="1"
                Aspect="Fill"
-               Source="bg4_aspert.png"/>
+               Source="{StaticResource TransparentBackground}"/>
         <ImageButton Grid.Row="2"   
                      BackgroundColor="Transparent"
                      Command="{Binding Push}"
                      CommandParameter="{Type aspert:ConfigurationPage}"
                      HorizontalOptions="End"
                      Margin="5,0,5,5"
-                     Source="user_aspert.png"
+                     Source="{StaticResource UserIcon}"
                      VerticalOptions="Center"/>
         <Grid Grid.Row="1"
               ColumnDefinitions="*,Auto,20,Auto,*"
