--- a/Aspert/Aspert/Views/QuestionPage.xaml
+++ b/Aspert/Aspert/Views/QuestionPage.xaml
@@ -5,27 +5,12 @@
              xmlns:aspert="clr-namespace:Aspert"
              x:Class="Aspert.QuestionPage"
              x:DataType="{x:Type vm:QuestionPageViewModel}">
-    <Grid BackgroundColor="{StaticResource Purple}"
-          RowDefinitions="*,12*,*">
-        <Grid.BindingContext>
+    <aspert:PageTemplate BackgroundColor="{StaticResource Purple}">
+        <aspert:PageTemplate.BindingContext>
             <vm:QuestionPageViewModel/>
-        </Grid.BindingContext>
-        <!-- Menú -->
-        <ImageButton Grid.Row="0"
-                     BackgroundColor="Transparent"
-                     Command="{Binding Push}"
-                     CommandParameter="{Type aspert:MenuPage}"
-                     HorizontalOptions="Start"
-                     Padding="10"
-                     Source="menub_aspert.png"/>
-        <!-- Fondo -->
-        <Image Grid.Row="1"
-               Aspect="Fill"
-               Source="bg4_aspert.png"/>
-        <!-- Contenido -->
+        </aspert:PageTemplate.BindingContext>
         <ScrollView Grid.Row="1">
-            <Grid Margin="20"
-                  RowDefinitions="Auto,5,Auto,*,150">
+            <Grid Margin="20" RowDefinitions="Auto,5,Auto,*,150">
                 <Frame BackgroundColor="{StaticResource Purple}">
                     <Label FontAttributes="Bold"
                            HorizontalTextAlignment="Center"
@@ -44,20 +29,13 @@
                         Padding="25"
                         Text="1. ¿Le resulta fácil participar en los juegos con otros niños?"/>
                 </Frame>
-                <!-- Botones y columnas -->
-                <Grid Grid.Row="4"
-                      ColumnDefinitions="Auto,*,Auto" 
-                      RowDefinitions="*,Auto,5,Auto,*">
+                <Grid Grid.Row="4" ColumnDefinitions="Auto,*,Auto" RowDefinitions="*,Auto,5,Auto,*">
                     <Grid.Resources>
                         <Style TargetType="{Type Button}">
-                            <Setter Property="FontAttributes"
-                                    Value="Bold"/>
-                            <Setter Property="TextColor"
-                                    Value="White"/>
-                            <Setter Property="WidthRequest"
-                                    Value="150"/>
-                            <Setter Property="HorizontalOptions"
-                                    Value="Center"/>
+                            <Setter Property="FontAttributes" Value="Bold"/>
+                            <Setter Property="TextColor" Value="White"/>
+                            <Setter Property="WidthRequest" Value="150"/>
+                            <Setter Property="HorizontalOptions" Value="Center"/>
                         </Style>
                     </Grid.Resources>
                     <Button Grid.Column="0"
@@ -75,19 +53,5 @@
                 </Grid>
             </Grid>
         </ScrollView>
-        <!-- Footer -->
-        <ImageButton Grid.Row="2"
-                     BackgroundColor="Transparent"
-                     Command="{Binding Back}"
-                     HorizontalOptions="Start"
-                     Padding="10"
-                     Source="back_aspert.png"/>
-        <ImageButton Grid.Row="2"             
-                     BackgroundColor="Transparent"
-                     Command="{Binding Push}"
-                     CommandParameter="{Type aspert:ConfigurationPage}"
-                     HorizontalOptions="End"
-                     Margin="5,0,5,5"
-                     Source="user_aspert.png"/>
-    </Grid>
+    </aspert:PageTemplate>
 </ContentPage>
