--- a/Aspert/Aspert/Views/TestPage.xaml
+++ b/Aspert/Aspert/Views/TestPage.xaml
@@ -5,27 +5,12 @@
              xmlns:aspert="clr-namespace:Aspert"
              x:Class="Aspert.TestPage"
              x:DataType="{x:Type vm:ViewModel}">
-    <Grid BackgroundColor="{StaticResource Purple}"
-          RowDefinitions="*,12*,*">
-        <Grid.BindingContext>
+    <aspert:PageTemplate BackgroundColor="{StaticResource Purple}">
+        <aspert:PageTemplate.BindingContext>
             <vm:ViewModel/>
-        </Grid.BindingContext>
-        <!-- Menú -->
-        <ImageButton Grid.Row="0"
-                     BackgroundColor="Transparent"
-                     Command="{Binding Push}"
-                     CommandParameter="{Type aspert:MenuPage}"
-                     HorizontalOptions="Start"
-                     Padding="10"
-                     Source="menub_aspert.png"/>
-        <!-- Fondo -->
-        <Image Grid.Row="1"
-               Aspect="Fill"
-               Source="bg4_aspert.png"/>
-        <!-- Contenido -->
+        </aspert:PageTemplate.BindingContext>
         <ScrollView Grid.Row="1">
-            <Grid Margin="20"
-                  RowDefinitions="*,5,Auto,*,*">
+            <Grid Margin="20" RowDefinitions="*,5,Auto,*,*">
                 <Frame BackgroundColor="{StaticResource Purple}">
                     <Label FontAttributes="Bold"
                            HorizontalTextAlignment="Center"
@@ -53,19 +38,5 @@
                         TextColor="White"/>
             </Grid>
         </ScrollView>
-        <!-- Footer -->
-        <ImageButton Grid.Row="2"
-                     BackgroundColor="Transparent"
-                     Command="{Binding Back}"
-                     HorizontalOptions="Start"
-                     Padding="10"
-                     Source="back_aspert.png"/>
-        <ImageButton Grid.Row="2"             
-                     BackgroundColor="Transparent"
-                     Command="{Binding Push}"
-                     CommandParameter="{Type aspert:ConfigurationPage}"
-                     HorizontalOptions="End"
-                     Margin="5,0,5,5"
-                     Source="user_aspert.png"/>
-    </Grid>
+    </aspert:PageTemplate>
 </ContentPage>
