--- a/Aspert/Aspert/Views/ConfigurationPage.xaml
+++ b/Aspert/Aspert/Views/ConfigurationPage.xaml
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:vm="clr-namespace:Aspert.ViewModels" 
              xmlns:db="clr-namespace:Aspert.Database"
+             xmlns:vm="clr-namespace:Aspert.ViewModels" 
              xmlns:aspert="clr-namespace:Aspert"
              x:Class="Aspert.ConfigurationPage"
              x:DataType="{x:Type vm:ConfigurationPageViewModel}">
@@ -16,13 +16,13 @@
                      Command="{Binding Push}"
                      CommandParameter="{Type aspert:MenuPage}"
                      HorizontalOptions="Start"
-                     Source="menug_aspert.png"
+                     Source="{StaticResource MenuIcon}"
                      Padding="10"/>
         <ImageButton Grid.Row="2" 
                      BackgroundColor="Transparent"
                      Command="{Binding Back}"
                      HorizontalOptions="Start"
-                     Source="back_aspert.png"
+                     Source="{StaticResource BackIcon}"
                      Padding="10"/>
         <Image Grid.Row="1"
                Aspect="Fill"
@@ -30,7 +30,7 @@
         <Grid Grid.Row="1"
               RowDefinitions="*,1.3*,*,4*,*">
             <Image Grid.Row="1"
-                   Source="user_aspert.png"
+                   Source="{StaticResource UserIcon}"
                    HorizontalOptions="Center"
                    VerticalOptions="Center"/>
             <Label x:Name="lbName"
@@ -39,11 +39,8 @@
                    FontAttributes="Bold" 
                    FontSize="32"
                    Text="{Binding Source={Static db:SQLiteDB.Usuario}}" />
-            <StackLayout Grid.Row="3" 
-                         BackgroundColor="White">
-                <Grid ColumnDefinitions="30,50,*,*,30" 
-                      RowDefinitions="*,*,*,*,*,*,*"
-                      Margin="10">
+            <StackLayout Grid.Row="3" BackgroundColor="White">
+                <Grid ColumnDefinitions="30,50,*,*,30" RowDefinitions="*,*,*,*,*,*,*" Margin="10">
                     <Label Grid.ColumnSpan="3"
                            Margin="15,0"
                            FontSize="Medium"
@@ -51,7 +48,7 @@
                     <!-- Uso de Datos Móviles -->
                     <Image Grid.Column="1" 
                            Grid.Row="1"
-                           Source="data_aspert.png"
+                           Source="{StaticResource DataIcon}"
                            HorizontalOptions="Start"/>
                     <Label Grid.Column="2"
                            Grid.ColumnSpan="2"
@@ -66,7 +63,7 @@
                     <!-- Sincronización -->
                     <Image Grid.Column="1" 
                            Grid.Row="2"
-                           Source="sync_aspert.png"
+                           Source="{StaticResource SynchonizeIcon}"
                            HorizontalOptions="Start"/>
                     <Label Grid.Column="2"
                            Grid.ColumnSpan="2"
@@ -81,7 +78,7 @@
                     <!-- Notifiaciones -->
                     <Image Grid.Column="1" 
                            Grid.Row="3"
-                           Source="notifications_aspert.png"
+                           Source="{StaticResource NotificationsIcon}"
                            HorizontalOptions="Start"/>
                     <Label Grid.Column="2"
                            Grid.ColumnSpan="2"
@@ -97,7 +94,7 @@
                     <ImageButton x:Name="btnEdit"
                                  Grid.Column="1"
                                  Grid.Row="4"
-                                 Source="edit_aspert.png"
+                                 Source="{StaticResource EditIcon}"
                                  HorizontalOptions="Start"
                                  BackgroundColor="Transparent"
                                  Pressed="ImageButton_Pressed"/>
@@ -109,7 +106,7 @@
                     <ImageButton x:Name="btnClose"
                                  Grid.Column="1" 
                                  Grid.Row="5"
-                                 Source="close_aspert.png"
+                                 Source="{StaticResource LogoutIcon}"
                                  HorizontalOptions="Start"
                                  BackgroundColor="Transparent"
                                  Pressed="ImageButton_Pressed"/>
@@ -121,7 +118,7 @@
                     <ImageButton x:Name="btnDelete"
                                  Grid.Column="1" 
                                  Grid.Row="6"
-                                 Source="trashcan_aspert.png"
+                                 Source="{StaticResource DeleteIcon}"
                                  HorizontalOptions="Start"
                                  BackgroundColor="Transparent"                   
                                  Pressed="ImageButton_Pressed"/>
