--- a/Aspert/Aspert/Views/TestPage.xaml
+++ b/Aspert/Aspert/Views/TestPage.xaml
@@ -29,7 +29,8 @@
                         FontSize="Small"
                         Text="El Test Infantil del Síndrome de Asperger ha demostrado ser útil en la identificación temprana de niños, entre edades comprendidas entre los cuatro y los once años, cuyos comportamientos sugieren un alto riesgo de presencia de un síndrome de Asperger. Cada pregunta puede proporcionar 0 o 1 puntos, pero hay seis preguntas que no puntuan. Por tanto, la puntuación máxima posible es de 31 puntos. Una puntuación total de 15 o superior sería indicativa de la presencia de comportamientos que justificarían realizar una valoración diagnóstica por parte de un profesional de la salud."/>
                 </Frame>
-                <Button Grid.Row="4"  
+                <Button x:Name="btnStart" 
+                        Grid.Row="4"  
                         BackgroundColor="{StaticResource Purple}"
                         Command="{Binding Push}"
                         CommandParameter="{Type aspert:QuestionPage}"
